--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thendral Veesum Veedu</title>
     <link rel="stylesheet" href="candle.css">
 </head>
 <body>
@@ -24,4 +24,5 @@
      
     </div>
 </body>
+
 </html>
